# aoc-2025

./: .gitignore  Cargo.toml  README.md
crates/aoc-lib/: Cargo.toml
crates/aoc-lib/src/: lib.rs
crates/aoc-tool/: Cargo.toml
crates/aoc-tool/src/: main.rs
crates/day01/: Cargo.toml
crates/day01/src/: main.rs
crates/day02/: Cargo.toml
crates/day02/src/: main.rs
crates/day03/: Cargo.toml
crates/day03/src/: main.rs
crates/day04/: Cargo.toml
crates/day04/src/: main.rs
crates/day05/: Cargo.toml
crates/day05/src/: main.rs
crates/day06/: Cargo.toml
crates/day06/src/: main.rs
crates/day07/: Cargo.toml
crates/day07/src/: main.rs
