[workspace]
members = ["crates/aoc-lib", "crates/aoc-tool", "crates/day01", "crates/day02",
    "crates/day03",
    "crates/day04"]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
itertools = "0.14"
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
